# lyfile

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
lyfile/: benchmarks.py  test_ly_file.py
lyfile/manager/: manager.py
lyfile/storage/: __init__.py  lyfile.c  lyfile.cpp  lyfile.pyx  mmap.cpp  mmap.pyx  reader.pyx  storage.py  vec_storage.cpp  vec_storage.pyx
lyfile/utils/: array.cpp  array.pyx  fsst.cpp  fsst.pxd  fsst.pyx  nnp.cpp  nnp.pyx
lyfile/utils/deprecated/: deprecated_fsst.py  fsst_core.c  fsst_core.pyx
python/lyfile/: __init__.py  __init__.pyi
python/lyfile/core/: __init__.py
python/lyfile/utils/: __init__.py
src/: distances.rs  lib.rs  neighbors.rs  py_api.rs  structs.rs
src/io/: dataloader.rs  mod.rs  writer.rs
tests/: test_lyfile.py
