[package]
name = "lyfile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
arrow = { version = "47.0", features = ["pyarrow", "ipc_compression", "prettyprint"] }
arrow-array = "47.0"
arrow-schema = "47.0"
arrow-select = "47.0"
arrow-data = "47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
byteorder = "1.4"
zstd = "0.12"
memmap2 = "0.5"
tempfile = "3.8"
numpy = "0.19"
ndarray = { version = "0.15", features = ["rayon"] }
bytemuck = "1.14"
num-traits = "0.2"
simsimd = "6.2"
num_cpus = "1.16"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 特定依赖项（如果需要）

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM 特定依赖项（如果需要）

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
simd = []

[build-dependencies]
cc = "1.0"

[build]
rustflags = ["-C", "target-feature=+neon"]
