[package]
name = "lyfile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
arrow = { version = "47.0", features = ["pyarrow", "ipc_compression", "prettyprint"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
byteorder = "1.4"
zstd = "0.12"
memmap2 = "0.5"
tempfile = "3.8"
numpy = "0.19"
ndarray = { version = "0.15", features = ["rayon"] }
bytemuck = "1.14"
num-traits = "0.2"
simsimd = "6.2"
lazy_static = "1.4.0"
half = "2.3"
lru = "0.7"
once_cell = "1.19"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3


[build-dependencies]
cc = "1"
