[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lyfile"
version = "0.1.0"
description = "A high-performance file format for data storage"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Birch Kwok", email = "birchkwok@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = [
    "pandas>=2.1.0",
    "pyarrow>=17.0.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lyfile._lib_lyfile"
python-source = "python"
